really don't know why it stopped aligning to center please work

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,9 +1,10 @@
 body {
+  text-align: center;
   font-family: 'Trebuchet MS', sans-serif;
   background: rgb(186,100,192);
   background: linear-gradient(70deg, rgba(186,100,192,1) 0%, rgba(188,193,202,1) 50%, rgba(255,157,0,1) 100%);
 }
 
-input[type=text]{
-  text-align: center;
+form {
+  display: inline-block;	
 }
